# OTB-DevUtils

./: .hgignore  otbcc.el
Config/: Arch-Release-pc-ingladaj-Wrapping-Python-Nightly.cmake  Debian-Debug-iron-Applications-Coverage.cmake  Debian-Debug-iron-Coverage.cmake  Debian-Debug-singaporecrisp-Applications.cmake  Debian-Debug-singaporecrisp.cmake  Debian-Release-gcc34-singaporecrisp-Applications.cmake  Debian-Release-gcc34-singaporecrisp-Wrapping.cmake  Debian-Release-gcc34-singaporecrisp.cmake  Debian-Release-gcc41-singaporecrisp-Applications.cmake  Debian-Release-gcc41-singaporecrisp-Wrapping.cmake  Debian-Release-gcc41-singaporecrisp.cmake  Debian-Release-gcc44-iron-Applications-Nightly.cmake  Debian-Release-gcc44-iron-Nightly.cmake  Debian-Release-iron-Applications-Continuous.cmake  Debian-Release-iron-Applications-Nightly.cmake  Debian-Release-iron-Continuous.cmake  Debian-Release-iron-Monteverdi-Nightly.cmake  Debian-Release-iron-Nightly.cmake  Debian-Release-iron-Wrapping-Nightly.cmake  Debian-Release-singaporecrisp-Applications-Continuous.cmake  Debian-Release-singaporecrisp-Applications.cmake  Debian-Release-singaporecrisp-Continuous.cmake  Debian-Release-singaporecrisp-Wrapping.cmake  Debian-Release-singaporecrisp.cmake  MacOSX10.6-Release-macbook-manuel-Monteverdi-Experimental.cmake  MacOSX10.6-Release-macbook-manuel-OTB-Applications-Experimental.cmake  MacOSX10.6-Release-macbook-manuel-OTB-Experimental.cmake  OpenSolaris-Release-iron-Applications-Nightly.cmake  OpenSolaris-Release-iron-Monteverdi-Nightly.cmake  OpenSolaris-Release-iron-Nightly.cmake  PC-2132356-Monteverdi-Nightly.cmake  PC-2132356-OTB-Applications-Nightly.cmake  PC-2132356-OTB-Nightly.cmake  PC-25572-Cyrille-Monteverdi.cmake  PC-25572-Cyrille-OTB-Applications.cmake  PC-25572-Cyrille-OTB.cmake  PC60517-Monteverdi-Nightly.cmake  PC60517-OTB-Applications-Nightly.cmake  PC60517-OTB-Nightly.cmake  PC61728-WinXP-OTB-Release-VC2008.cmake  (+196 more)
LicenseMigration/: README.md  migrate.sh  replace_headers.py
Packaging/osgeo4w/tinyxml/: CMakeLists.txt  package.cmd  setup.hint  tinyxml.sln  tinyxml_dll.vcxproj
Purgatory/: Readme
Scripts/: CheckVisibility.sh  FindRedundantHeaderIncludes.py  FluidVersionNormalisation.py  dora.py  (+94 more)
Scripts/GDALOpenJpegPlugin/: CMakeLists.txt
(+1012 files in other folders)
